Added navbar progress indicater

--- a/appointments/templates/index.html
+++ b/appointments/templates/index.html
@@ -17,11 +17,11 @@
 <body>
 
 <nav class="navbar">
-  <ul>
+  <ul id="check">
     <li><a class="active" href="#details">Patient Details &#8594;</a></li>
-    <li><a href="#doctor-select">Select Your Doctor &#8594;</a></li>
-    <li><a href="#date-and-time">Date and Time &#8594;</a></li>
-    <li><a href="#checkout">Check Out</a></li>
+    <li><a class="inactive" id="link-doctor-select" href="#doctor-select">Select Your Doctor &#8594;</a></li>
+    <li><a class="inactive" id="link-date-and-time" href="#date-and-time">Date and Time &#8594;</a></li>
+    <li><a class="inactive" id="link-checkout" href="#checkout">Check Out</a></li>
   </ul>
 </nav>
 
