Added arrows in navbar progress indicater

--- a/appointments/templates/index.html
+++ b/appointments/templates/index.html
@@ -18,9 +18,9 @@
 
 <nav class="navbar">
   <ul id="check">
-    <li><a class="active" href="#details">Patient Details &#8594;</a></li>
-    <li><a class="inactive" id="link-doctor-select" href="#doctor-select">Select Your Doctor &#8594;</a></li>
-    <li><a class="inactive" id="link-date-and-time" href="#date-and-time">Date and Time &#8594;</a></li>
+    <li><a class="active" href="#details">Patient Details <i class="arrow right"></i></a></li>
+    <li><a class="inactive" id="link-doctor-select" href="#doctor-select">Select Your Doctor <i class="arrow right"></i></a></li>
+    <li><a class="inactive" id="link-date-and-time" href="#date-and-time">Date and Time <i class="arrow right"></i></a></li>
     <li><a class="inactive" id="link-checkout" href="#checkout">Check Out</a></li>
   </ul>
 </nav>
