--- a/appointments/static/css/styles.css
+++ b/appointments/static/css/styles.css
@@ -37,3 +37,21 @@ nav.navbar li a.active {
   background-color: #04AA6D;
   color: white;
 }
+
+/*
+    Arrow in navbar
+*/
+
+.arrow {
+  border: solid rgb(255, 255, 255);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  z-index: auto;
+  margin-left: 10px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
